CHANGES - Familia (front end) - Listando integrantes familiares

--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/familia/familia-form.html
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/familia/familia-form.html
@@ -229,177 +229,25 @@
 									
 										<form novalidate name="model.integranteFamiliar.form" class="default-form">
 											<div class="default-info" flex> 
-												<span>INFORMAÇÕES DA FAMÍLIA</span>
+												<span>Integrantes Familiares</span>
 											</div>
 											
-											<div layout="row">
-								    			<md-input-container layout="column" flex="30" style="margin-right:30px">
-										    		<label>Nome da família</label>
-									                <input maxlength="144" name="nome" required ng-model="model.familia.entity.nome">
-									
-									                <div ng-messages="model.familia.form.nome.$error">
-									                	<div ng-message="required" ng-if="model.familia.form.$submitted">Campo obrigatório</div>
-									                </div>
-									            </md-input-container>
-									            
-									            <md-input-container layout="column" flex="30" ">
-										    		<label>Nome da Mãe</label>
-									                <input maxlength="144" name="nomeMae" required ng-model="model.familia.entity.nomeMae">
-									
-									                <div ng-messages="model.familia.form.nomeMae.$error">
-									                	<div ng-message="required" ng-if="model.familia.form.$submitted">Campo obrigatório</div>
-									                </div>
-									            </md-input-container>
-									        </div>
-									        
-									        <div layout="row">
-								    			<md-input-container layout="column" flex="30" ">
-										    		<label>Telefone</label>
-									                <input type="number" maxlength="12" name="telefone" required ng-model="model.familia.entity.telefone">
-									
-									                <div ng-messages="model.familia.form.telefone.$error">
-									                	<div ng-message="required" ng-if="model.familia.form.$submitted">Campo obrigatório</div>
-									                </div>
-									            </md-input-container>
-											</div>
-											
-											<div class="default-info" flex> 
-												<span>ENDEREÇO</span>
-											</div>
-											
-											<div layout="row">
-								    			<md-input-container layout="column" flex="30" style="margin-right:30px">
-										    		<label>Rua</label>                                  
-									                <input maxlength="144" name="rua" required ng-model="model.familia.entity.endereco.rua">
-									
-									                <div ng-messages="model.familia.form.rua.$error">
-									                	<div ng-message="required" ng-if="model.familia.form.$submitted">Campo obrigatório</div>
-									                </div>
-									            </md-input-container>
-									            
-									            <md-input-container layout="column" flex="30" ">
-										    		<label>Bairro</label>
-									                <input maxlength="144" name="bairro" required ng-model="model.familia.entity.endereco.bairro">
-									
-									                <div ng-messages="model.familia.form.bairro.$error">
-									                	<div ng-message="required" ng-if="model.familia.form.$submitted">Campo obrigatório</div>
-									                </div>
-									            </md-input-container>
-									        </div>
-									        
-									        <div layout="row">
-									        	<md-autocomplete 
-									        		style="margin-right:20px" 
-									        		md-selected-item="model.pais.selectedItem" 
-									        		md-search-text="model.pais.searchText"
-													md-search-text-change="listPaisesByFiltes(model.pais.searchText)" 
-													md-items="item in model.pais.itens" 
-													md-item-text="item.nome"
-													placeholder="País"
-													>
-													
-													<md-item-template>
-														<span md-highlight-text="searchText">{{item.nome}}</span>
-												    </md-item-template>
-												    <md-not-found>
-												    	Nenhum país encontrado
-												    </md-not-found>
-												</md-autocomplete>
-												
-												<md-autocomplete 
-													style="margin-right:20px"
-													md-selected-item="model.estado.selectedItem" 
-													md-search-text="model.estado.searchText" 
-													md-search-text-change="listEstadosByFiltes(model.estado.searchText)" 
-													md-items="item in model.estado.itens" 
-													md-item-text="item.nome"
-													placeholder="Estado"
-													>
-													
-													<md-item-template>
-														<span md-highlight-text="searchText">{{item.nome}}</span>
-												    </md-item-template>
-												    <md-not-found>
-												    	Nenhum estado encontrado
-												    </md-not-found>
-												</md-autocomplete>
-												
-												<md-autocomplete 
-													md-selected-item="model.cidade.selectedItem" 
-													md-search-text="model.cidade.searchText" 
-													md-search-text-change="listCidadesByFiltes(model.cidade.searchText)" 
-													md-items="item in model.cidade.itens" 
-													md-item-text="item.nome"
-													placeholder="Cidade"
-													>
-													<md-item-template>
-														<span md-highlight-text="searchText">{{item.nome}}</span>
-												    </md-item-template>
-												    <md-not-found>
-												    	Nenhum estado encontrado
-												    </md-not-found>
-												</md-autocomplete>
-												
-									        </div>
-									        
-									        <div class="default-info" flex> 
-												<span>INFORMAÇÕES DA MORADIA</span>
-											</div>
-											
-											<div layout="row">
-								    			<md-input-container layout="column" flex="30" style="margin-right:30px">
-										    		<label>Número de cômodos</label>
-									                <input type="number" maxlength="144" name="numeroComodos" required ng-model="model.familia.entity.numeroComodos">
-									
-									                <div ng-messages="model.familia.form.numeroComodos.$error">
-									                	<div ng-message="required" ng-if="model.familia.form.$submitted">Campo obrigatório</div>
-									                </div>
-									            </md-input-container>
-									            
-									            <md-input-container layout="column" flex="30" gap="30">
-										    		<label>Número de dormitórios</label>
-									                <input type="number" maxlength="144"name="numeroDormitorios" required ng-model="model.familia.entity.numeroDormitorios">
-									
-									                <div ng-messages="model.familia.form.numeroDormitorios.$error">
-									                	<div ng-message="required" ng-if="model.familia.form.$submitted">Campo obrigatório</div>
-									                </div>
-									            </md-input-container>
-									        </div>
-											
-											<div layout="row">
-												<md-input-container layout="column" flex="30" style="margin-right:30px">
-											        <label>Tipo de Moradia</label>
-											        <md-select required ng-model="model.familia.entity.tipoMoradia">
-											          <md-option required ng-repeat="tipoMoradia in allTiposMoradia" value="{{tipoMoradia}}">{{tipoMoradia}}</md-option>
-											        </md-select>
-											    </md-input-container>
-											    
-											    <md-input-container layout="column" flex="30">
-											        <label>Tipo do imóvel</label>
-											        <md-select id="paia" ng-model="model.familia.entity.tipoImovel">
-											          <md-option ng-repeat="tipoImovel in allTiposImovel" value="{{tipoImovel}}">{{tipoImovel}}</md-option>
-											        </md-select>
-											    </md-input-container>
-											</div>
-											
-											<div layout="row">
-												<md-input-container layout="column" flex="30" style="margin-right:30px">
-										    		<label>Situação do Imóvel</label>
-									                <input maxlength="144" name="situacaoImovel" required ng-model="model.familia.entity.situacaoImovel">
-									
-									                <div ng-messages="model.familia.form.situacaoImovel.$error">
-									                	<div ng-message="required" ng-if="model.familia.form.$submitted">Campo obrigatório</div>
-									                </div>
-									            </md-input-container>
-								    			<md-input-container layout="column" flex="30" style="margin-right:30px">
-										    		<label>Infraestrutura</label>
-									                <input maxlength="144" name="infraestrutura" required ng-model="model.familia.entity.infraestrutura">
-									
-									                <div ng-messages="model.familia.form.infraestrutura.$error">
-									                	<div ng-message="required" ng-if="model.familia.form.$submitted">Campo obrigatório</div>
-									                </div>
-									            </md-input-container>
-									        </div>
+											<md-table-container>
+											  <table md-table md-row-select multiple ng-model="selected" md-progress="promise">
+											    <thead md-head md-order="query.order" md-on-reorder="getDesserts">
+											      <tr md-row>
+											        <th md-column md-order-by="nameToLower"><span>Nome</span></th>
+											        <th md-column md-numeric ><span>Data de nascimento</span></th>
+											      </tr>
+											    </thead>
+											    <tbody md-body>
+											      <tr md-row md-select="dessert" style="cursor:pointer" ng-click="" md-select-id="name" md-auto-select ng-repeat="integrante in model.integranteFamiliar.page">
+											        <td md-cell>{{::integrante.nome}}</td>
+											        <td md-cell>{{::integrante.dataNascimento | date : format : timezone}}</td>
+											      </tr>
+											    </tbody>
+											  </table>
+											</md-table-container>
 									        
 										</form>
 									</md-toolbar>
