--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/familia/familia-list.html
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/familia/familia-list.html
@@ -52,7 +52,7 @@
 					      </tr>
 					    </thead>
 					    <tbody md-body>
-					      <tr md-row md-select="dessert" style="cursor:pointer" ng-click="$state.go( EDIT_STATE, {id:familia.id} )" md-select-id="name" md-auto-select ng-repeat="familia in model.familia.page">
+					      <tr md-row md-select="dessert" style="cursor:pointer" ng-click="$state.go( EDIT_STATE, {id:familia.id} )" md-select-id="name" md-auto-select ng-repeat="familia in model.familia.page.content">
 					        <td md-cell>{{::familia.nome}}</td>
 					        <td md-cell>{{::familia.nomeMae}}</td>
 					        <td md-cell>{{::familia.endereco.rua}}</td>
